@@ -1,4 +1,7 @@
 2020-01-11  Franz Holzinger  <franz@ttproducts.de>
+    * remove the wizard and remove the plugin
+
+2020-01-11  Franz Holzinger  <franz@ttproducts.de>
     * update the template file for Indexed Search as Fluid Extension
 
 2019-10-03  Franz Holzinger  <franz@ttproducts.de>
